--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.niuti.fuyuan.headwords"
         minSdkVersion 14
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile files('libs/universal-image-loader-1.9.4.jar')
+    compile files('libs/afinal-0.3.32-bin.jar')
 }
